2007-11-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6712: htmlArea RTE: make hotkeys configurable in PageTSConfig
	* Feature #6712 continued: htmlArea RTE: adding hotkeys to default configuration settings

2007-11-14  Ingmar Schlecht  <ingmar@typo3.org>

	* Cleanup-up to prior commit #529: "TypoScript help" module
	* Added SVN properties to new files
	* Minor changes to feature #6670: Enable Tabs in Page Properties
	* Feature #6710: Use optgroups in selectorboxes

2007-11-14  Ingo Renner	<ingo@typo3.org>

	* fixed bug #6692: When letting TYPO3 generate DB table icons it can happen that transparent areas become rendered black
	* added follow up on feature #6670: Enable Tabs in Page Properties

2007-11-14  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Fixed feature #529: update inline TypoScript help (Thanks to Francois Suter)

2007-11-14  Benjamin Mack  <mack@xnos.org>

	* (feature) Fixed #6625: Cleaner Backend / HCI: Make "alt_doc" header fixed

2007-11-13  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6705: htmlArea RTE: Display all classes of an element in the statusbar
	* htmlArea RTE: Update manual and version  to 1.6.3dev
	* Feature #6579 continued: Allow plugins to register hotkeys

2007-11-13  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #633: Menu doesn't expand if ".special" is set

2007-11-13  Benjamin Mack  <mack@xnos.org>

	* (minor) Fixed bug #6548: FE "Preview" Label not stylable

2007-11-12  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6696: Parts of the TYPO3 back-end do not work correctly with prototype.js 1.6.0

2007-11-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6579 continued: Backtracking on the use of Prototype.js by htmlArea RTE.

2007-11-11  Ingmar Schlecht  <ingmar@typo3.org>

	* Minor code-cleanup to recent Workspace related changes

2007-11-10  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
