@@ -2,6 +2,7 @@
 
 	* Feature #6712: htmlArea RTE: make hotkeys configurable in PageTSConfig
 	* Feature #6712 continued: htmlArea RTE: adding hotkeys to default configuration settings
+	* Bugfix: htmlArea RTE: Correction to InlineDefault plugin causing frame reload.
 
 2007-11-14  Ingmar Schlecht  <ingmar@typo3.org>
 
